Increase font size & fix resulting overflows
Font size was increased for user readability.

The font size of Announcements was decreased such that there is no
text overflow on the default zoom size.

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ p {
 html {
   font-family: "X Typewriter", var(--fallback-font-stack);
   --fallback-font-stack: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   
   /* Color palette */
   --palette-dominant: hsl(23, 41%, 33%);
@@ -373,18 +373,19 @@ input[type="search"]:focus {
 
 .announcements {
   grid-area: announcements;
-  padding: var(--primary-pad-size);
-
+  
   display: grid;
   grid-template-rows: repeat(3, 1fr);
-  font-size: 0.8rem;
+  font-size: 0.75rem;
+  padding: var(--primary-pad-size);
+  overflow: auto; /* Note (a) */
 
-  overflow: auto;
+  /* Note (a): Not much content can fit in this panel with all the styling,
+  font size, and line height. Accomodate this! */
 } 
 
 .announcements h3 {
-  font-size: 0.9rem;
-  margin-bottom: var(--content-card-h3-margin-bottom);
+  font-size: 0.8rem;
 }
 
 .announcement {
